# gala-pip-plugin

./: CMakeLists.txt  README.md
data/: org.pantheon.desktop.gala.plugins.popup-window.gschema.xml
src/: Main.vala  MoveAction.vala  PopupWindow.vala  RoundedRectangleEffect.vala  SelectionActor.vala  SelectionArea.vala  config.vala.cmake
